# codex-finder

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: find_bin.rs
src/: coder_discovery.rs  codex_discovery.rs  command.rs  lib.rs  wsl.rs
