[package]
name = "codex-finder"
version = "0.1.1"
authors = ["Milisp <milisp@proton.me>"]
edition = "2024"
license = "MIT"
description = "Locate the codex and coder CLI binaries."
repository = "https://github.com/milisp/codex-finder"
homepage = "https://github.com/milisp/codex-finder"
keywords = ["codex", "coder", "code"]
categories = ["development-tools::debugging", "development-tools::profiling"]
readme = "README.md"

[dependencies]
log = "0.4"
anyhow = "1.0"
regex = "1.12"